--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -22923,7 +22923,7 @@ header .secHeader #video-toggle {
 .section8 {
   height: auto;
   background-color: rgb(13, 11, 9);
-  padding-bottom: 10%;
+  padding-bottom: 5%;
 }
 .section8 hr {
   color: white;
@@ -23050,6 +23050,137 @@ header .secHeader #video-toggle {
   color: white;
   margin-left: 40%;
   margin-top: 2.5%;
+}
+
+#hrAvantFooter {
+  color: white;
+  width: 95%;
+  margin-top: 5%;
+}
+
+.section9 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: auto;
+  background-color: rgb(13, 11, 9);
+  padding-bottom: 5%;
+}
+.section9 #lien1 {
+  flex-direction: column;
+  width: 25%;
+  height: auto;
+}
+.section9 #lien1 h5 {
+  color: white;
+  font-size: 35px;
+  font-weight: 400;
+  margin-bottom: 7.5%;
+}
+.section9 #lien1 p {
+  color: white;
+  margin-bottom: 2.5%;
+  font-weight: 500;
+}
+.section9 #lien1 .text-white {
+  display: flex;
+  gap: 5%;
+  margin-top: 7.5%;
+}
+.section9 #lien1 .text-white .fa-brands {
+  border: none;
+  border-radius: 50%;
+  padding: 15px;
+  background-color: rgb(39, 37, 31);
+}
+.section9 #lien2 {
+  flex-direction: column;
+  width: 20%;
+  height: auto;
+}
+.section9 #lien2 h6 {
+  color: white;
+  font-size: 27.5px;
+  font-weight: 400;
+  margin-bottom: 7.5%;
+}
+.section9 #lien2 ul {
+  padding-left: 2%;
+}
+.section9 #lien2 li {
+  list-style: none;
+  line-height: 47.5px;
+  color: white;
+}
+.section9 #lien2 li .fa-solid {
+  color: rgb(162, 129, 74);
+}
+.section9 #lien3 {
+  flex-direction: column;
+  width: 20%;
+  height: auto;
+}
+.section9 #lien3 h6 {
+  color: white;
+  font-size: 27.5px;
+  font-weight: 400;
+  margin-bottom: 7.5%;
+}
+.section9 #lien3 ul {
+  padding-left: 2%;
+}
+.section9 #lien3 li {
+  list-style: none;
+  line-height: 47.5px;
+  color: white;
+}
+.section9 #lien3 li .fa-solid {
+  color: rgb(162, 129, 74);
+}
+.section9 #lien4 {
+  flex-direction: column;
+  width: 30%;
+  height: auto;
+}
+.section9 #lien4 h6 {
+  color: white;
+  font-size: 27.5px;
+  font-weight: 400;
+  margin-bottom: 7.5%;
+}
+.section9 #lien4 p {
+  color: white;
+  font-size: 22.5px;
+}
+.section9 #lien4 .subscribe-container {
+  display: flex;
+  border-radius: 30px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: #222222;
+  width: 350px;
+}
+.section9 #lien4 .input-field {
+  padding: 12px 20px;
+  min-width: 200px !important;
+  border: none;
+  outline: none;
+  background-color: #222222;
+  color: white;
+  flex-grow: 1;
+}
+.section9 #lien4 .subscribe-button {
+  border-radius: 50px;
+  padding: 8px;
+  padding-left: 25px;
+  padding-right: 25px;
+  background: none;
+  border: 1px orange solid;
+  background-color: rgb(205, 164, 93);
+  color: white;
+  font-weight: 600;
+  transition: background-color 0.3s;
+  border: none;
 }
 
 /*# sourceMappingURL=style.css.map */
