--- a/src/sass/partials/_style.sass
+++ b/src/sass/partials/_style.sass
@@ -81,7 +81,6 @@ header
       display: none
     
 
-
 #videoPopup
   padding: 0
   border: solid 3px
@@ -104,10 +103,8 @@ header
         align-items: center
         justify-content: center
         z-index: 101
-
 .fa-play
   cursor: pointer
-
 
 
 .section1
@@ -499,7 +496,7 @@ header
 .section8   
   height: auto
   background-color: rgb(13, 11, 9)
-  padding-bottom: 10%
+  padding-bottom: 5%
   hr
     color: white 
     width: 7.5%
@@ -605,3 +602,106 @@ header
         margin-left: 40%
         margin-top: 2.5%
         
+
+#hrAvantFooter
+  color: white
+  width: 95%
+  margin-top: 5%
+
+
+
+.section9
+  @include flex
+  height: auto
+  background-color: rgb(13, 11, 9)
+  padding-bottom: 5%
+  #lien1
+    flex-direction: column
+    width: 25%
+    height: auto
+    h5
+      color: white
+      font-size: 35px
+      font-weight: 400
+      margin-bottom: 7.5%
+    p
+      color: white
+      margin-bottom: 2.5%
+      font-weight: 500
+    .text-white
+      display: flex
+      gap: 5%
+      margin-top: 7.5%
+      .fa-brands
+        border: none
+        border-radius: 50%
+        padding: 15px
+        background-color: rgb(39, 37, 31)
+  #lien2
+    flex-direction: column
+    width: 20%
+    height: auto
+    h6
+      color: white
+      font-size: 27.5px
+      font-weight: 400
+      margin-bottom: 7.5%
+    ul
+      padding-left: 2%
+    li
+      list-style: none
+      line-height: 47.5px
+      color: white
+      .fa-solid
+        color: rgb(162, 129, 74)
+  #lien3
+    flex-direction: column
+    width: 20%
+    height: auto
+    h6
+      color: white
+      font-size: 27.5px
+      font-weight: 400
+      margin-bottom: 7.5%
+    ul
+      padding-left: 2%
+    li
+      list-style: none
+      line-height: 47.5px
+      color: white
+      .fa-solid
+        color: rgb(162, 129, 74)
+  #lien4
+    flex-direction: column
+    width: 30%
+    height: auto
+    h6
+      color: white
+      font-size: 27.5px
+      font-weight: 400
+      margin-bottom: 7.5%
+    p
+      color: white
+      font-size: 22.5px
+    .subscribe-container 
+            display: flex;
+            border-radius: 30px;
+            overflow: hidden;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            background-color: #222222
+            width: 350px
+    .input-field 
+            padding: 12px 20px
+            min-width: 200px !important
+            border: none;
+            outline: none;
+            background-color: #222222;
+            color: white;
+            flex-grow: 1
+    .subscribe-button 
+            @include boutonheader
+            background-color: rgb(205, 164, 93)
+            color: white
+            font-weight: 600
+            transition: background-color 0.3s
+            border: none
